[package]
name = "mass_networking"
version = "0.2.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.12"
bevy_ggrs = { version = "0.14", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8", features = ["ggrs"] }
bevy_rapier3d = { version = "0.23", default-features = false, features = [
    "dim3",
] }
dev = { path = "dev/_wrapper" }
